--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!--feather  -->
     <script src="https://unpkg.com/feather-icons"></script>
 
-    <link href="../utama/utama.css" rel="stylesheet" />
+    <link href="utama.css" rel="stylesheet" />
     <title>Document</title>
   </head>
   <body>
@@ -115,11 +115,10 @@
         <h2 class="head">Tentang saya</h2>
         <div class="p"></div>
         <p>
-          Seorang Mahasiswa Universitas Ahmad Dahlan dengan jurusan
-          Informatika.Telah berpengalaman selama 2 tahun di bidang apa aja yang
-          penting halal. Pernah mengemban proyek besar sebesar cintaku padamu
-          walaupun cintamu lebih besar ke orang lain. Mempunyai hobi ngedit dan
-          lain lain
+          Saya adalah mahasiswa Informatika di Universitas Ahmad Dahlan, saat ini berada di semester 4.
+          Saya memiliki minat yang kuat dalam bidang pengembangan web, pengembangan perangkat lunak, 
+          dan pemrograman. Saya aktif menggunakan bahasa pemrograman seperti C++, Python, dan JavaScript, 
+          serta memahami penggunaan Git dan MySQL.
         </p>
 
         <div class="contabout">
@@ -151,29 +150,29 @@
 
             <img src="cpp.png" alt="" />
             <p>
-              Dalam penggunaan bahasa C++ saya sudah berpengalaman selama 1
-              minggu
+              Dalam penggunaan bahasa C++ saya sudah berpengalaman selama 2
+              tahun
             </p>
           </div>
           <div class="konten2">
             <h3>HTML</h3>
             <img src="html.png" alt="" />
             <p>
-              Dalam penggunaan bahasa C++ saya sudah berpengalaman selama 1
-              minggu
+              Dalam penggunaan Html saya sudah berpengalaman selama 2
+              tahun
             </p>
           </div>
 
           <div class="konten3">
             <h3>CSS</h3>
             <img src="cs.png" alt="" />
-            <p>Dalam penggunaan css saya sudah berpengalaman selama 1 minggu</p>
+            <p>Dalam penggunaan css saya sudah berpengalaman selama 2 tahun</p>
           </div>
           <div class="konten4">
             <h3>Javacript</h3>
             <img src="js.png" alt="" />
             <p>
-              Dalam penggunaan bahasa Javacript saya belum terlalu berpengalaman
+              Dalam penggunaan  Javacript saya sudah berpengalaman selama 1 tahun 
             </p>
           </div>
         </div>
